core/testing/snapshots/operators/math.snap
### TITLE ###
Math_Float
### INPUT ###
print(1.2 + 2.3)
print(3.0 / 2.0)
print(3.0 / 2)
### STDOUT ###
3.5
1.5
1.5

### TITLE ###
Math_Int
### INPUT ###
print(1 + 3)
print(3 / 2)
### STDOUT ###
4
1.5

### TITLE ###
Math_ErrorsOnIntIntDivisionByZero
### INPUT ###
a = 1 / 0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:1:9
  |
1 | a = 1 / 0
  |         ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_ErrorsOnFloatIntDivisionByZero
### INPUT ###
a = 1.0 / 0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:1:11
  |
1 | a = 1.0 / 0
  |           ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_ErrorsOnIntFloatDivisionByZero
### INPUT ###
a = 1 / 0.0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:1:9
  |
1 | a = 1 / 0.0
  |         ^^^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_ErrorsOnFloatFloatDivisionByZero
### INPUT ###
a = 1.0 / 0.0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:1:11
  |
1 | a = 1.0 / 0.0
  |           ^^^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_CompoundDivideByZeroIntIntErrors
### INPUT ###
a = 1
a /= 0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:2:6
  |
1 | a = 1
2 | a /= 0
  |      ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_CompoundDivideByZeroIntFloatErrors
### INPUT ###
a = 1
a /= 0.0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:2:6
  |
1 | a = 1
2 | a /= 0.0
  |      ^^^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_CompoundDivideByZeroFloatIntErrors
### INPUT ###
a = 1.0
a /= 0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:2:6
  |
1 | a = 1.0
2 | a /= 0
  |      ^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_CompoundDivideByZeroFloatFloatErrors
### INPUT ###
a = 1.0
a /= 0.0
### STDERR ###
error[RAD20036]: Divisor was 0, cannot divide by 0
  --> <script>:2:6
  |
1 | a = 1.0
2 | a /= 0.0
  |      ^^^
  |
   = info: rad explain RAD20036


### EXIT ###
1
### TITLE ###
Math_CanHaveManyPluses
### INPUT ###
a = 1 +++++++++ +2
print(a)
### STDOUT ###
3

### TITLE ###
Math_CanHaveManyMinuses
### INPUT ###
a = 1 + -------2
print(a)
### STDOUT ###
-1

